--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <title>sammy samkough</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./styles.css" />
   </head>
   <body>
