multiple pages and organization

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>sammy samkough</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="./styles.css" />
-  </head>
-  <body>
-    <p>my website</p>
-  </body>
-</html>
+<p>my website</p>
+<a href="/about">let's go to about!</a>
