add images - needs consolidation and more genericism

--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -1,3 +1,2 @@
-<div>this is the about page</div>
-<p>hi im a paragraph</p>
-<a href="/">back to the first page</a>
+<h1>about</h1>
+<p>hi im sammy samkough :)</p>
