--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -1,2 +1,3 @@
 <h1>sammy samkough</h1>
-<p>hi this is my site</p>
+<p>hi this is my (sammy samkough's) site</p>
+<p>it's currently undergoing a severe makeover. please be patient</p>
