--- a/public/pages/latin-america-2023-trip.html
+++ b/public/pages/latin-america-2023-trip.html
@@ -1,7 +1,7 @@
 <h1>latin america 2023 trip</h1>
 <img
   src="assets/latin-america-2023-trip/yech-01.jpg"
-  alt="yechen fu making a silly face"
+  alt="my friend yechen fu making a silly face"
   width="140"
   height="200"
 />
