--- a/public/pages/adventures.html
+++ b/public/pages/adventures.html
@@ -1,4 +1,6 @@
 <h1>adventures</h1>
+<p>dedicated to all the adventures i have been on that i would like to share</p>
+<br />
 <ul>
   <li><a href="latin-america-2023-trip">latin america 2023 trip</a></li>
 </ul>
