--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -1,4 +1,2 @@
 <h1>contact</h1>
-<p>
-  hi you can contact me via <a href="mailto:sammysamkough@gmail.com">email</a>
-</p>
+<p>my <a href="mailto:sammysamkough@gmail.com">email</a></p>
