latin america -> argentina

--- a/public/pages/argentina-2023-trip.html
+++ b/public/pages/argentina-2023-trip.html
@@ -1,6 +1,6 @@
-<h1>latin america 2023 trip</h1>
+<h1>argentina 2023 trip</h1>
 <img
-  src="assets/latin-america-2023-trip/yech-01.jpg"
+  src="assets/argentina-2023-trip/yech-01.jpg"
   alt="my friend yechen fu making a silly face"
   width="140"
   height="200"
