moar switch to argentina

--- a/public/pages/adventures.html
+++ b/public/pages/adventures.html
@@ -2,5 +2,5 @@
 <p>dedicated to all the adventures i have been on that i would like to share</p>
 <br />
 <ul>
-  <li><a href="latin-america-2023-trip">latin america 2023 trip</a></li>
+  <li><a href="argentina-2023-trip">argentina 2023 trip</a></li>
 </ul>
