--- a/public/pages/adventures/argentina-2023-trip/index.html
+++ b/public/pages/adventures/argentina-2023-trip/index.html
@@ -1,6 +1,6 @@
 <h1>argentina 2023 trip</h1>
 <img
-  src="./assets/yech-01.jpg"
+  src="/assets/yech-01.jpg"
   alt="my friend yechen fu making a silly face"
   width="140"
   height="200"
