dynamically add index dot css link (fucking cool stuff)

--- a/public/pages/index/index.html
+++ b/public/pages/index/index.html
@@ -1,3 +1,10 @@
 <h1>sammy samkough</h1>
-<p>hi this is my (sammy samkough's) site</p>
-<p>it's currently undergoing a severe makeover. please be patient</p>
+<p>welcome to my website ♥</p>
+
+<!-- <br />
+
+<div>
+  <section>more about me</section>
+
+  <section></section>
+</div> -->
