updates to several pages

--- a/public/pages/adventures/argentina-2023-trip/index.html
+++ b/public/pages/adventures/argentina-2023-trip/index.html
@@ -1,4 +1,9 @@
 <h1>argentina 2023 trip</h1>
+<p>
+  currently working on this. in the meantime, enjoy this picture of my friend,
+  yechen fu
+</p>
+<br />
 <img
   src="/assets/yech-01.jpg"
   alt="my friend yechen fu making a silly face"
