--- a/public/pages/index/index.html
+++ b/public/pages/index/index.html
@@ -1,10 +1,27 @@
 <h1>sammy samkough</h1>
 <p>welcome to my website ♥</p>
 
-<!-- <br />
+<br />
 
 <div>
-  <section>more about me</section>
+  <a href="/adventures/argentina-2023-trip">
+    <section class="featured">
+      <dt><h3>argentina 2023 trip</h3></dt>
+      <dd>experience my latest travel adventures in argentina</dd>
+    </section>
+  </a>
 
-  <section></section>
-</div> -->
+  <a href="/about"
+    ><section>
+      <dt><h3>about me</h3></dt>
+      <dd>to learn more about me, sammy :)</dd>
+    </section>
+  </a>
+
+  <a href="/contact">
+    <section>
+      <dt><h3>contact</h3></dt>
+      <dd>information on how to contact me</dd>
+    </section>
+  </a>
+</div>
