--- a/public/pages/sitemap/index.html
+++ b/public/pages/sitemap/index.html
@@ -1,4 +1,9 @@
 <h1>sitemap</h1>
+
+<p>list of all of my website's pages</p>
+
+<br />
+
 <ul>
   <li><a href="/">home</a></li>
   <li><a href="/about">about</a></li>
