--- a/public/pages/about/index.html
+++ b/public/pages/about/index.html
@@ -2,11 +2,32 @@
 
 <div>
   <p>hi, my name is sammy samkough :)</p>
-  <p>i was born in state of new jersey (usa) on march 17 1998</p>
-  <p>i identify (strongly) as a first-generation american syrian circassian</p>
   <p>
-    i always struggle to figure out how to best talk about myself. and so while
-    i figure that out, enjoy this image of my mother and i
+    i was born in new jersey, usa, on march 17 1998 (my freckles are proof of
+    this)
+  </p>
+  <p>
+    i am a first-generation american syrian circassian. my parents were born in
+    syria, and specifically come from the golan heights. before that, my
+    ancestors were living in "circassia"
+  </p>
+  <p>
+    i always struggle how to talk about myself. and for some reason, i always
+    end up starting with this: i love my family. it is my main character trait,
+    i suppose. when i say family, i dont <em>just</em> mean blood-related
+    family. i also mean my found family ; people from high school, my local
+    commmunity, etc.
+  </p>
+  <p>
+    it's hard to describe my love for my family. if i were to put it bluntly,
+    you could say that i am literally <em>in love</em> with them. the feelings
+    are immensely strong. i would do anything for them.
+  </p>
+  <p>
+    other then my family, i love pizza, eating food, the web (internet),
+    watching movies, reading books, watching shows (aka the sopranos), playing
+    soccer, adventuring / traveling, cuddling with my mama. there's a lot more i
+    love but those are it for now
   </p>
   <img
     src="/assets/me-and-mama.png"
