--- a/public/pages/sitemap/index.html
+++ b/public/pages/sitemap/index.html
@@ -8,6 +8,7 @@
   <li><a href="/">home</a></li>
   <li><a href="/about">about</a></li>
   <li><a href="/contact">contact</a></li>
+  <li><a href="/notes">notes</a></li>
   <li><a href="/adventures">adventures</a></li>
   <ul>
     <li>
