add classes to hp css due to firefox not having has selector implemented yet

--- a/public/pages/index/index.html
+++ b/public/pages/index/index.html
@@ -3,22 +3,25 @@
 
 <br />
 
-<div>
-  <a href="/adventures/argentina-2023-trip">
+<div class="div-firefox-does-not-support-has-yet">
+  <a
+    class="a-firefox-does-not-support-has-yet"
+    href="/adventures/argentina-2023-trip"
+  >
     <section class="featured">
       <dt><h3>argentina 2023 trip</h3></dt>
       <dd>experience my latest travel adventures in argentina</dd>
     </section>
   </a>
 
-  <a href="/about"
+  <a class="a-firefox-does-not-support-has-yet" href="/about"
     ><section>
       <dt><h3>about me</h3></dt>
       <dd>to learn more about me, sammy :)</dd>
     </section>
   </a>
 
-  <a href="/contact">
+  <a class="a-firefox-does-not-support-has-yet" href="/contact">
     <section>
       <dt><h3>contact</h3></dt>
       <dd>information on how to contact me</dd>
