website builders to boycott

--- a/public/pages/sitemap/index.html
+++ b/public/pages/sitemap/index.html
@@ -9,6 +9,13 @@
   <li><a href="/about">about</a></li>
   <li><a href="/contact">contact</a></li>
   <li><a href="/notes">notes</a></li>
+  <ul>
+    <li>
+      <a href="/notes/website-builders-to-boycott"
+        >website builders to boycott</a
+      >
+    </li>
+  </ul>
   <li><a href="/adventures">adventures</a></li>
   <ul>
     <li>
