--- a/public/pages/about/index.html
+++ b/public/pages/about/index.html
@@ -1,6 +1,6 @@
 <h1>about</h1>
 
-<div>
+<div class="reading-block">
   <p>hi, my name is sammy samkough :)</p>
   <p>
     i was born in new jersey, usa (united states of america) on march 17 1998
