--- a/public/pages/notes/website-builders-to-boycott/index.html
+++ b/public/pages/notes/website-builders-to-boycott/index.html
@@ -159,8 +159,15 @@
     website builders you'd like for me to audit.
   </p>
   <p>
-    so please contact me if i've misinterpreted something, said something
-    incorrect, missed some information, etc.
+    so please <a href="mailto:sammysamkough@gmail.com">contact me</a> if i've
+    misinterpreted something, said something incorrect, missed some information,
+    etc.
+  </p>
+  <p>ps</p>
+  <p>
+    if you or anyone needs help migrating their website from using an
+    Israeli-supported tool, please let me know. i would be more than happy to
+    help :)
   </p>
   <p>
     last updated on
