--- a/public/pages/notes/website-builders-to-boycott/index.html
+++ b/public/pages/notes/website-builders-to-boycott/index.html
@@ -165,9 +165,9 @@
   </p>
   <p>ps</p>
   <p>
-    if you or anyone needs help migrating their website from using an
-    Israeli-supported tool, please let me know. i would be more than happy to
-    help :)
+    if you or anyone needs help migrating their website from using any of the
+    tools listed or not listed here (example: migrating from Wix to Wordpress),
+    please let me know. i would be more than happy to help :)
   </p>
   <p>
     last updated on
