--- a/public/pages/index/index.html
+++ b/public/pages/index/index.html
@@ -4,10 +4,15 @@
 <br />
 
 <div>
-  <a href="/adventures/argentina-2023-trip">
+  <a href="/palestine">
     <section class="featured">
-      <dt><h3>argentina 2023 trip</h3></dt>
-      <dd>experience my latest travel adventures in argentina</dd>
+      <dt>
+        <h3>
+          <span class="fp-free-text">free</span>
+          <span class="fp-palestine-text">palestine</span>
+        </h3>
+      </dt>
+      <dd class="ftrtts-text"><em>from the river to the sea</em></dd>
     </section>
   </a>
 
