--- a/public/pages/palestine/index.html
+++ b/public/pages/palestine/index.html
@@ -30,6 +30,6 @@
   sandbox="allow-scripts allow-popups allow-forms allow-same-origin allow-popups-to-escape-sandbox allow-downloads allow-storage-access-by-user-activation"
   allowfullscreen=""
   src="https://datawrapper.dwcdn.net/SAgXc/2/"
-  style="width: 500px; height: 500px; overflow: auto"
+  style="max-width: 500px; width: 100%; height: 500px; overflow: auto"
 >
 </iframe>
