updated sitemap, notes and created about / summary page

--- a/public/pages/notes/index.html
+++ b/public/pages/notes/index.html
@@ -1,3 +1,10 @@
 <h1>notes</h1>
 <p>list of notes i want to share</p>
-<p>there are none so far!</p>
+
+<br />
+
+<ul>
+  <li>
+    <a href="/notes/website-builders-to-boycott">website builders to boycott</a>
+  </li>
+</ul>
