--- a/public/pages/sitemap/index.html
+++ b/public/pages/sitemap/index.html
@@ -6,8 +6,12 @@
 
 <ul>
   <li><a href="/">home</a></li>
-  <li><a href="/about">about</a></li>
   <li><a href="/contact">contact</a></li>
+  <li><a href="/works">works</a></li>
+  <li><a href="/about">about</a></li>
+  <ul>
+    <li><a href="/summary">summary</a></li>
+  </ul>
   <li><a href="/notes">notes</a></li>
   <ul>
     <li>
