fixed summary link in sitemap

--- a/public/pages/sitemap/index.html
+++ b/public/pages/sitemap/index.html
@@ -10,7 +10,7 @@
   <li><a href="/works">works</a></li>
   <li><a href="/about">about</a></li>
   <ul>
-    <li><a href="/summary">summary</a></li>
+    <li><a href="/about/summary">summary</a></li>
   </ul>
   <li><a href="/notes">notes</a></li>
   <ul>
