add resources to palesitne

--- a/public/pages/palestine/index.html
+++ b/public/pages/palestine/index.html
@@ -6,19 +6,48 @@
 <h2 class="ftrtts-text">
   <em>from the river to the sea</em>
 </h2>
-
 <br />
 
-<h2>...</h2>
-<br />
-
-<h2>
+<p>
   <a
     href="https://decolonizepalestine.com/introduction-to-palestine/"
     target="_blank"
     >it didnt start on october 7th 2023</a
   >
-</h2>
+</p>
+<br />
+
+<h2>resources</h2>
+<ul>
+  <li>
+    new to palestine:
+    <a href="https://decolonizepalestine.com">decolonizepalestine.com</a>
+  </li>
+  <ul>
+    <li>
+      common faqs:
+      <a href="https://decolonizepalestine.com/faq"
+        >decolonizepalestine.com/faq</a
+      >
+    </li>
+  </ul>
+  <li>
+    boycott, divestment, sanctions (BDS):
+    <a href="https://bdsmovement.net/what-is-bds"
+      >bdsmovement.net/what-is-bds</a
+    >
+  </li>
+  <ul>
+    <li>
+      common faqs:
+      <a href="https://bdsmovement.net/faqs">bdsmovement.net/faqs</a>
+    </li>
+  </ul>
+  <li>
+    encyclopedia of everything palestine:
+    <a href="https://www.palquest.org">palquest.org</a>
+  </li>
+</ul>
 <br />
 
 <h2>...</h2>
