updates to homepage + footer

--- a/public/pages/index/index.html
+++ b/public/pages/index/index.html
@@ -1,10 +1,73 @@
 <h1>sammy samkough</h1>
-<p>welcome to my website ♥</p>
 
 <br />
 
 <div>
-  <a href="/palestine">
+  <div
+    style="
+      max-width: 800px;
+      overflow-wrap: break-word;
+      -webkit-nbsp-mode: space;
+      line-break: after-white-space;
+      border: 2px inset black;
+      padding: 20px;
+    "
+  >
+    <div>The martyr Kareem Mohammed Abu Shamala</div>
+    <div><br /></div>
+    <div>
+      His father wrote: "Tomorrow, November 5th, marks Kareem's ninth birthday.
+      How Kareem had been looking forward to this day for three months, counting
+      the days. He invited all his friends and his cousins a while ago, saying,
+      'I want to have a big party.' Just two hours before his martyrdom, while
+      we were having lunch, he said to me, 'Ten days until my birthday.'&nbsp;
+    </div>
+    <div><br /></div>
+    <div>
+      What keeps me patient is knowing that you, Kareem, are in heaven with your
+      grandfather, Samir, your grandmother, Aziza, your uncle, Ayman, and his
+      wife and children—Samir, Yamen, Mira, Aboud—alongside your cousin,
+      Hussein, his mother, your uncle, Ismail, with his wife, Mohammed, Zeina,
+      your uncle, Ahmed, along with your friends, Aksu, Youssef, Lara, Saleh,
+      your uncle, Habib, your friend, Ibrahim, alongside your aunt, Rula, your
+      aunt, Leena, and your cousin, Wisam. Now you can celebrate your birthday
+      in heaven with them, all happy, away from this dark world. Take gifts,
+      Kareem, and toys as you wish. You can play billiards and PlayStation
+      comfortably, and I won't tell you as usual, 'That's enough playing, go to
+      sleep.' Happy birthday, my dear.
+    </div>
+    <div><br /></div>
+    <div>
+      Your brother, Samir, sends his regards and always asks about you. Your
+      mother talks to your pictures every night. Come and enhance our dreams.
+      But tell your grandfather, Samir, before he asks where you went, 'May God
+      make it easy for you, my dear.'"
+    </div>
+  </div>
+
+  <ul
+    style="
+      margin: 0;
+      padding: 20px 0;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 16px;
+      list-style-type: none;
+      font-size: 1.4em;
+    "
+  >
+    <li class="body-link-item">
+      <a href="/palestine">
+        <span class="fp-free-text">free</span>
+        <span class="fp-palestine-text">palestine</span>
+      </a>
+    </li>
+    <li class="body-link-item"><a href="/about">about</a></li>
+    <li class="body-link-item"><a href="/works">works</a></li>
+    <li class="body-link-item"><a href="/contact">contact</a></li>
+  </ul>
+
+  <!-- <a href="/palestine">
     <section class="featured">
       <dt>
         <h3>
@@ -40,5 +103,5 @@
         <dd>information on how to contact me</dd>
       </section>
     </a>
-  </div>
+  </div> -->
 </div>
