--- a/public/pages/index/index.html
+++ b/public/pages/index/index.html
@@ -45,26 +45,16 @@
     </div>
   </div>
 
-  <ul
-    style="
-      margin: 0;
-      padding: 20px 0;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 16px;
-      list-style-type: none;
-      font-size: 1.4em;
-    "
-  >
-    <li class="body-link-item">
+  <ul class="body-links">
+    <li>
       <a href="/palestine">
         <span class="fp-free-text">free</span>
         <span class="fp-palestine-text">palestine</span>
       </a>
     </li>
-    <li class="body-link-item"><a href="/about">about</a></li>
-    <li class="body-link-item"><a href="/works">works</a></li>
-    <li class="body-link-item"><a href="/contact">contact</a></li>
+    <li><a href="/about">about</a></li>
+    <li><a href="/works">works</a></li>
+    <li><a href="/contact">contact</a></li>
   </ul>
 
   <!-- <a href="/palestine">
