media query homepage

--- a/public/pages/index/index.html
+++ b/public/pages/index/index.html
@@ -3,16 +3,7 @@
 <br />
 
 <div>
-  <div
-    style="
-      max-width: 800px;
-      overflow-wrap: break-word;
-      -webkit-nbsp-mode: space;
-      line-break: after-white-space;
-      border: 2px inset black;
-      padding: 20px;
-    "
-  >
+  <div class="main-message">
     <div>The martyr Kareem Mohammed Abu Shamala</div>
     <div><br /></div>
     <div>
