--- a/public/pages/sitemap/index.html
+++ b/public/pages/sitemap/index.html
@@ -6,6 +6,7 @@
 
 <ul>
   <li><a href="/">home</a></li>
+  <li><a href="/palestine">palestine</a></li>
   <li><a href="/contact">contact</a></li>
   <li><a href="/works">works</a></li>
   <li><a href="/about">about</a></li>
