adds stories to resources in palestine page

--- a/public/pages/palestine/index.html
+++ b/public/pages/palestine/index.html
@@ -50,6 +50,17 @@
 </ul>
 <br />
 
+<h3>stories</h3>
+<ul>
+  <li>
+    <a
+      href="https://wearenotnumbers.org/late-night-in-eden-in-winter-and-in-war"
+      >wearenotnumbers.org/late-night-in-eden-in-winter-and-in-war</a
+    >
+  </li>
+</ul>
+<br />
+
 <h2><span id="days-passed">...</span></h2>
 <br />
 
