add socials to contact page

--- a/public/pages/contact/index.html
+++ b/public/pages/contact/index.html
@@ -5,3 +5,12 @@
     >sammysamkough [at] gmail [dot] com</a
   >
 </p>
+<p>my socials</p>
+<ul>
+  <li>
+    <a href="https://www.github.com/ssamkough">github</a>
+  </li>
+  <li>
+    <a href="https://www.linkedin.com/in/ssamkough">linkedin</a>
+  </li>
+</ul>
