--- a/public/pages/palestine/index.html
+++ b/public/pages/palestine/index.html
@@ -17,6 +17,42 @@
 </p>
 <br />
 
+<div class="main-message">
+  <div>The martyr Kareem Mohammed Abu Shamala</div>
+  <div><br /></div>
+  <div>
+    His father wrote: "Tomorrow, November 5th, marks Kareem's ninth birthday.
+    How Kareem had been looking forward to this day for three months, counting
+    the days. He invited all his friends and his cousins a while ago, saying, 'I
+    want to have a big party.' Just two hours before his martyrdom, while we
+    were having lunch, he said to me, 'Ten days until my birthday.'&nbsp;
+  </div>
+  <div><br /></div>
+  <div>
+    What keeps me patient is knowing that you, Kareem, are in heaven with your
+    grandfather, Samir, your grandmother, Aziza, your uncle, Ayman, and his wife
+    and children—Samir, Yamen, Mira, Aboud—alongside your cousin, Hussein, his
+    mother, your uncle, Ismail, with his wife, Mohammed, Zeina, your uncle,
+    Ahmed, along with your friends, Aksu, Youssef, Lara, Saleh, your uncle,
+    Habib, your friend, Ibrahim, alongside your aunt, Rula, your aunt, Leena,
+    and your cousin, Wisam. Now you can celebrate your birthday in heaven with
+    them, all happy, away from this dark world. Take gifts, Kareem, and toys as
+    you wish. You can play billiards and PlayStation comfortably, and I won't
+    tell you as usual, 'That's enough playing, go to sleep.' Happy birthday, my
+    dear.
+  </div>
+  <div><br /></div>
+  <div>
+    Your brother, Samir, sends his regards and always asks about you. Your
+    mother talks to your pictures every night. Come and enhance our dreams. But
+    tell your grandfather, Samir, before he asks where you went, 'May God make
+    it easy for you, my dear.'"
+  </div>
+</div>
+<br />
+<hr />
+<br />
+
 <h2>resources</h2>
 <ul>
   <li>
